# vdb

./: Cargo.toml  convert.py
src/: lib.rs  main.rs  util.rs
src/client/: mod.rs
src/database/: cosine.rs  db.rs  mod.rs
src/embeddings/: bert.rs  mod.rs  pooling.rs
