[package]
name = "vdb"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "convert"
path = "src/bin/convert.rs"
doc = false

[dependencies]
bytes = "1.10.1"
chrono = "0.4.41"
polars = "0.47.1"
rand = "0.9.1"
rust-bert = "0.23.0"
rust_tokenizers = "8.1.1"
serde = "1.0.219"
time = "0.3.41"
tokio = "1.45.0"
tracing = "0.1.41"
uuid = "1.16.0"
